--- a/css/style.css
+++ b/css/style.css
@@ -1137,3 +1137,242 @@ a:hover {
   vertical-align: middle;
   margin-left: 5px;
 }
+
+/*SECTION 6*/
+
+
+/*SECTION 7*/
+.s7 {
+  max-width: 972px;
+  margin: auto;
+  /*margin-top: 46px;
+  margin-bottom: 46px;*/
+  text-align: center;
+  font-size: 0;
+  /*border: solid 1px red;*/
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.s7::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+.s7_line {
+  border: none;
+  border-bottom: solid 1px #d8d8d8;
+  margin-top: 80px;
+
+}
+.s7_content {
+   margin-top: -80px;
+   margin-left: auto;
+   margin-right: auto;
+   background-image: url("../images/7-1.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  /*background-size: cover;*/
+  height: 160px;
+  width: 200px;
+  background-color: white;
+   font-family: 'Dorsa', sans-serif;
+   text-transform: uppercase;
+   color: white;
+   /*position: relative;*/
+   /*padding-top: 30px;*/
+}
+.s7_content_line1 {
+  /*font-family: 'Dorsa', sans-serif;*/
+  font-size: 36px;
+  line-height: 20px;
+  /*text-transform: uppercase;
+  color: white;*/
+ /*position: relative;
+margin-top: 30px;*/
+padding-top: 38px;
+}
+.s7_content_line2 div:nth-child(1) {
+  display: inline-block;
+font-size: 80px;
+line-height: 80px;
+/*vertical-align: top;*/
+}
+.s7_content_line2 div:nth-child(2) {
+  text-align: left;
+  display: inline-block;
+font-size: 37px;
+line-height: 37px;
+/*vertical-align: top;*/
+/*white-space: nowrap;*/
+/*border: solid 1px blue;*/
+margin-left: 5px;
+}
+
+/*SECTION 8*/
+
+.s8 {
+  /*padding-top: -30px;*/
+  max-width: 1002px;
+  margin: auto;
+  /*margin-top: 46px;
+  margin-bottom: 46px;*/
+  text-align: center;
+  font-size: 0;
+}
+
+.s8::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.s8_left, .s8_right {
+  display: inline-block;
+}
+
+
+
+
+.s6_8_tile {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  display: inline-block;
+  position: relative;
+  margin-left: 15px;
+  margin-right: 15px;
+width: 220px;
+height: 395px;
+/*border: solid 1px red;*/
+}
+
+.s6_8_tile_sale {
+  position: absolute;
+}
+
+.s6_8_tile_sale_bg {
+   position: absolute;
+  border-top: solid 25px #4c4c4c;
+  border-left: solid 25px #4c4c4c;
+  border-bottom: solid 25px white;
+  border-right: solid 25px white;
+}
+.s6_8_tile_sale_text {
+  position: absolute;
+  color: white;
+  top: 4px;
+  left: 5px;
+  font-size: 10px;
+  font-family: 'Roboto Condensed', sans-serif;
+  text-transform: uppercase;
+}
+
+
+.s8_tile_image {
+  width: 220px;
+  height: 290px;
+}
+
+.s6_8_tile_text {
+  width: 220px;
+  height: 105px;
+  background-color: #f7f7f7;
+  font-family: Arial, Helvetica, sans-serif;
+     font-weight: 300;
+   /*font-family: 'Roboto Condensed', sans-serif;*/
+  text-transform: uppercase;
+
+  color: #373737;
+}
+.s6_8_tile_name {
+  font-size: 12px;
+  padding-top: 10px;
+  
+}
+.s6_8_tile_price {
+  font-size: 22px;
+   padding-top: 10px;
+   padding-bottom: 10px;
+}
+
+.add_to_cart_button {
+
+  color: white;
+  font-weight: 300;
+  font-family: Arial, Helvetica, sans-serif;
+  /*font-family: 'Roboto Condensed', sans-serif;*/
+  text-transform: uppercase;
+  height: 29px;
+  border: none;
+  background-color: #fd926d;
+  border-bottom: solid 3px #dd6b44;
+  cursor: pointer;
+  font-size: 12px;
+}
+
+.add_to_cart_button:hover {
+  background-color: #dd6b44;
+}
+
+.add_to_cart_button span {
+  vertical-align: middle;
+  padding-left: 10px;
+}
+
+.add_to_cart_button img {
+  vertical-align: middle;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+/*SECTION 9*/
+
+.s9 {
+  padding-top: 15px;
+ padding-bottom: 15px;
+/*border: solid 1px red;*/
+  margin-top: 30px;
+  margin-bottom: 30px;
+  text-align: center;
+  font-size: 0;
+}
+
+.s9::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.s9_line1, .s9_line2 {
+  border: none;
+  border-bottom: solid 1px #d8d8d8;
+}
+.s9_line2 {
+  margin-top: 9px;
+  
+}
+.s9_title {
+   font-family: Arial, Helvetica, sans-serif;
+   text-transform: uppercase;
+   font-size: 15px;
+   color: #414141;
+   background-color: white;
+   margin-top: -9px;
+   width: 190px;
+   margin-left: auto;
+   margin-right: auto;
+  z-index: 999;
+}
+.s9_brand_pic {
+  vertical-align: middle;
+  margin-left: 24px;
+  margin-right: 24px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+
+/*SECTION 10*/
+/*SECTION 11*/
+/*SECTION 12*/
+/*SECTION 13*/
