--- a/css/style.css
+++ b/css/style.css
@@ -1496,16 +1496,165 @@ position: absolute;
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
 /*SECTION 12*/
+
+.s12 {
+  background-color: #ededed;
+  /*max-width: 972px;
+  margin: auto;*/
+  padding-top: 20px;
+ padding-bottom: 20px;
+/*border: solid 1px red;*/
+  /*margin-top: 20px;*/
+  /*margin-bottom: 20px;*/
+  text-align: center;
+font-size: 0;
+}
+
+.s12::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.s12_column {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: inline-block;
+  vertical-align: top;
+   text-align: left;
+   margin-left: 30px;
+   margin-right: 30px;
+}
+
+.s12_column:last-child {
+  background-image: url("../images/12-7.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 130px;
+  width: 110px;
+  font-family: Arial, Helvetica, sans-serif;
+   font-family: 'Roboto Condensed', sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  color: #a59d9a;
+}
+
+
+
+.s12_column_title {
+  font-family: Arial, Helvetica, sans-serif;
+   color: #544f4d;
+   font-size: 16px;
+   margin-bottom: 12px;
+
+}
+
+.s12_column_list_item {
+   font-family: Arial, Helvetica, sans-serif;
+   color: #544f4d;
+   font-size: 12px;
+   list-style: none;
+   margin-top: 5px;
+}
+
+.s12_last_column_line1 {
+  font-size: 30px;
+    line-height: 30px;
+  margin-top: 42px;
+}
+.s12_last_column_line2 {
+  font-size: 14px;
+  line-height: 14px;
+}
+
 /*SECTION 13*/
+.s13_container {
+  background-color: black;
+}
+/*.s13_container::after {
+  content: "";
+  clear: both;
+  display: table;
+}*/
+
+.s13 {
+  position: relative;
+  
+  max-width: 972px;
+  margin: auto;
+  /*padding-top: 20px;
+ padding-bottom: 20px;*/
+/*border: solid 1px red;*/
+  /*margin-top: 20px;*/
+  /*margin-bottom: 20px;*/
+   font-family: Arial, Helvetica, sans-serif;
+font-size: 0;
+color: #8d8d8d;
+}
+
+.s13::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.s13_left {
+  float: left;
+height: 32px;
+}
+.s13_menu_icon {
+  color: white;
+font-size: 14px;
+cursor: pointer;
+  
+  width: 32px;
+  height: 32px;
+  line-height: 32px;
+ float: left;
+ display: none;
+}
+
+.s13_menu {
+float: left;
+/*line-height: 32px;*/
+
+}
+
+.s13_menu_item {
+  line-height: 32px;
+  list-style: none;
+  display: inline-block;
+  font-size: 11px;
+  color: #8d8d8d;
+  /*margin-left: 5px;*/
+  margin-right: 10px;
+}
+.s13_menu_item::after {
+  content: "|";
+  margin-left: 10px;
+  
+}
+.s13_menu a:last-child .s13_menu_item::after{
+  content: " ";
+  
+}
+
+
+.s13_right {
+  text-align: right;
+  line-height: 14px;
+ position: absolute;
+ right: 0;
+  top: 2px;
+}
+
+.s13_copyright {
+  font-size: 11px;
+}
+
+
+
+
+
+
