--- a/css/style.css
+++ b/css/style.css
@@ -1703,3 +1703,109 @@ a:hover {
 .s13_copyright {
   font-size: 11px;
 }
+
+
+
+
+/*------------------PRODUCT PAGE-------------------*/
+
+
+.s14 {
+  /*padding-top: 15px;
+  padding-bottom: 15px;*/
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 0;
+}
+
+.s14::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.s14_line {
+  border: none;
+  border-bottom: solid 1px #d8d8d8;
+}
+
+.s14_title {
+  font-family: Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
+  font-size: 15px;
+  color: #414141;
+  background-color: white;
+  margin-top: -9px;
+  width: 190px;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+/*SECTION 15*/
+
+.s15 {
+  
+  max-width: 972px;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 0;
+}
+
+.s15::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.s15_line1,
+.s15_line2 {
+  border: none;
+  border-bottom: solid 1px #d8d8d8;
+  clear: both;
+}
+
+.s15_breadcrumbs {
+  list-style: none;
+  float: left;
+}
+
+
+.s15_breadcrumbs_item {
+  display: inline-block;
+  font-size: 13px;
+  line-height: 30px;
+  height: 30px;
+}
+.s15_breadcrumbs_item::after {
+  content: ">";
+padding-left: 6px;
+padding-right: 6px;
+}
+.s15_breadcrumbs_item:last-child::after {
+  content: "";
+  padding-left: 0px;
+padding-right: 0px;
+}
+
+/*SECTION 16*/
+
+.s16 {
+  max-width: 972px;
+  margin: auto;
+  /*padding-top: 15px;
+  padding-bottom: 15px;*/
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 0;
+}
+
+.s16::after {
+  content: "";
+  clear: both;
+  display: table;
+}
