--- a/css/style.css
+++ b/css/style.css
@@ -1764,7 +1764,7 @@ a:hover {
 .s15_line1,
 .s15_line2 {
   border: none;
-  border-bottom: solid 1px #d8d8d8;
+  border-bottom: solid 1px #d6d6d6;
   clear: both;
 }
 
@@ -1776,13 +1776,15 @@ a:hover {
 
 .s15_breadcrumbs_item {
   display: inline-block;
-  font-size: 13px;
-  line-height: 30px;
-  height: 30px;
+  font-size: 11px;
+  line-height: 28px;
+  height: 28px;
+   font-family: Arial, Helvetica, sans-serif;
+   color: #7a706d;
 }
 .s15_breadcrumbs_item a {
-   font-size: 13px;
-   color: black;
+   font-size: 11px;
+  color: #7a706d;
 }
 .s15_breadcrumbs_item::after {
   content: ">";
