--- a/css/style.css
+++ b/css/style.css
@@ -1946,3 +1946,52 @@ font-size: 14px;
   list-style: none;
   
 }
+
+
+/*SECTION 17*/
+
+.s17 {
+  max-width: 972px;
+  margin: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  /*text-align: center;*/
+  font-size: 0;
+   border-top: solid 1px #d6d6d6;
+  border-bottom: solid 1px #d6d6d6;
+}
+
+.s17::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+.s17_social_container {
+  display: inline-block;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+.s17_social_pic_container {
+display: inline-block;
+  border: solid 2px #b8a9a4;
+  border-radius: 50%;
+  height: 45px;
+  width: 45px;
+  line-height: 45px;
+   vertical-align: middle;
+}
+.s17_social_pic {
+  vertical-align: middle;
+}
+
+.s17_social_text {
+  display: inline-block;
+font-size: 11px;
+   font-family: Arial, Helvetica, sans-serif;
+   text-transform: uppercase;
+   color: #4d4d4d;
+    vertical-align: middle;
+}
+
