--- a/css/style.css
+++ b/css/style.css
@@ -442,11 +442,14 @@ a:hover {
 /*SECTION 3*/
 
 .mySlides {
-  height: 440px;
   display: none;
   background-position: left;
-  background-size: cover;
   background-repeat: no-repeat;
+}
+
+.s3 .mySlides {
+  height: 440px;
+   background-size: cover;
 }
 
 .mySlides:nth-child(1) {
@@ -461,9 +464,11 @@ a:hover {
 /* Slideshow container */
 
 .slideshow-container {
-  max-width: 1200px;
   position: relative;
   margin: auto;
+}
+.s3 .slideshow-container {
+    max-width: 1200px;
 }
 
 
@@ -1838,6 +1843,7 @@ padding-right: 0px;
   height: 110px;
   width: 90px;
   margin-right: 13px;
+  cursor: pointer;
 }
 .s16_product_small:last-child {
   margin-right: 0px;
@@ -1947,7 +1953,6 @@ font-size: 14px;
   
 }
 
-
 /*SECTION 17*/
 
 .s17 {
@@ -1993,5 +1998,163 @@ font-size: 11px;
    text-transform: uppercase;
    color: #4d4d4d;
     vertical-align: middle;
+    text-align: left;
+    margin-left: 10px;
 }
+
+/*SECTION 18*/
+
+.s18 {
+  max-width: 972px;
+  margin: auto;
+  /*padding-top: 20px;
+  padding-bottom: 20px;*/
+  margin-top: 20px;
+  margin-bottom: 20px;
+  /*text-align: center;*/
+  font-size: 0;
+}
+
+.s18::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+.s18_container_title {
+text-align: left;
+}
+
+.s18_container:nth-child(1) .s18_container_title {
+  background-color: orange;
+}
+.s18_container:nth-child(2) .s18_container_title {
+  background-color: orange;
+}
+.s18_container:nth-child(3) .s18_container_title {
+  background-color: orange;
+}
+.s18_container:nth-child(4) .s18_container_title {
+  background-color: orange;
+}
+.s18_container:nth-child(5) .s18_container_title {
+  background-color: orange;
+}
+
+
+
+.s18_container_button {
+  border: none;
+  vertical-align: middle;
+  background-color: orange;
+  border: solid 1px white;
+  width: 20px;
+  height: 20px;
+}
+.s18_container_title_text, 
+.s18_container_title_number {
+  font-family: Arial, Helvetica, sans-serif;
+   text-transform: uppercase;
+   color: white;
+   font-size: 16px;
+}
+
+
+/*SECTION 19  */
+
+.s19 .slideshow-container {
+   max-width: 972px;
+}
+
+
+.s19 .mySlides {
+  height: 440px;
+  display: none;
+  background-position: left;
+  /*background-size: cover;*/
+  background-repeat: no-repeat;
+  border-bottom: solid 1px grey;
+}
+
+.s19 .mySlides:nth-child(1) {
+  background-image: url('../images/productspage/3-tile-bg-1-products.png');
+}
+
+.s19 .mySlides:nth-child(2) {
+  background-image: url('../images/productspage/3-tile-bg-1-products.png');
+}
+
+
+
+/* Next & previous buttons */
+
+.prev,
+.next {
+  height: 116px;
+  cursor: pointer;
+  position: absolute;
+  top: 162px;
+  width: 30px;
+  color: #cbcbca;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  background-color: #fefefd;
+  line-height: 116px;
+}
+
+.prev {
+  left: 0;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #fe926d;
+}
+
+.s19 .slide_text_container {
+  text-align: left;
+}
+  
+.s19 .slide_text {
+  width: 400px;
+  margin-left: auto;
+}
+
+
+.s3_button_text {
+  vertical-align: middle;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.s3_button_image {
+  vertical-align: middle;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.dot {
+  cursor: pointer;
+  height: 10px;
+  width: 10px;
+  margin: 0 10px;
+  background-color: #867a76;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+  margin-bottom: 14px;
+}
+
+.active,
+.dot:hover {
+  background-color: #fe926d;
+}
+
 
